# langchain-slack-qa-bot

./: .env.example  .gitignore  DESIGN.md  README.md  pyproject.toml  slack-qa-bot-architecture-docs.md  slack-qa-bot-architecture.drawio
eval/: EXPERIMENTS.md  evaluate.py  experiments.py  results.json  scenarios.py  slack_e2e_test.py  stress_test.py
src/: agent.py  db.py  main.py  memory.py  prompts.py  slack_handler.py  timing.py  tools.py
tests/: conftest.py  test_security.py  test_tools.py
